# supafit

./: .gitignore  main.py  pubspec.yaml  pyproject.toml  readme.MD  requirements.txt  routes.py  teste.py
.github/workflows/: build_android.yml  main.yml
components/: appbar_class.py  avatar_component.py  community_tab.py  components.py  custom_list_tile.py  days_time.py  exercise_card.py  exercise_tile.py  load_editor.py  message.py  timer_dialog.py  trainer_tab.py  workout_tile.py
core/: healthcheck.py  load_user_preferences.py  startup.py
pages/: ask_trainer.py  community.py  community_tab.py  create_profile.py  forgot_password.py  history.py  home.py  interactions.py  login.py  profile.py  profile_settings.py  register.py  settings.py  terms_page.py  trainer_tab.py  treino.py  workout.py
pages/auth/: forgot_password.py  login.py  register.py  update_password.py
pages/auth/utils/: animations.py  validators.py
pages/community/: community_tab.py  controller.py  models.py  service.py  ui_components.py
pages/profile_settings/: profile_components.py  profile_settings.py
pages/profile_user/: base_step.py  create_profile.py  step1_name.py  step2_age.py  step3_gender.py  step3_weight.py  step4_height.py  step4_weight.py  step5_goal.py  step5_height.py  step6_goal.py  step6_review.py  step7_restrictions.py  step8_review.py  step_goal_restrictions.py  step_personal_data.py  step_physical_data.py  step_review.py
pages/support/: support.py  support_components.py  support_handlers.py  support_sections.py
pages/trainer_chat/: chat_logic.py  components.py  data.py  message.py  trainer_main.py
pages/training/: exercise_tile.py  training_components.py  treino.py
services/: anthropic.py  anthropic_service.py  images_splash.py  openai.py  services.py  supabase.py  supabase_service.py  trainer_functions.py  workout_generator.py
utils/: alerts.py  datetime_br.py  helpers.py  loading_dialog.py  logger.py  notification.py  quebra_mensagem.py
