[project]
name = "SupaFit"
version = "0.1.0"
description = "Um app de treino fitness com Flet e Supabase"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Alison developer", email = "Alisondev77@hotmail.com" }
]
dependencies = [
    "flet==0.27.6",
    "supabase",
    "python-dotenv",
    "requests>=2.28.0",
    "matplotlib>=3.5.0",
    "pyjnius",
    "flet-permission-handler"
]

[tool.flet]
org = "com.aldevsoftware"

permissions = [
  "camera",
  "request_install_packages",
  "notification",
  "microphone",
  "access_notification_policy",
  "bluetooth",
  "bluetooth_advertise",
  "bluetooth_connect",
  "bluetooth_scan",
  "post_notifications",
  "vibrate",
  "wake_lock",
  "foreground_service"
]

product = "SupaFit"
company = "Aldev Software"
copyright = "Copyright (C) 2025 por Aldev Software"

[tool.flet.android.permission]
"android.permission.CAMERA" = true
"android.permission.RECORD_AUDIO" = true
"android.permission.INTERNET" = true
"android.permission.ACCESS_NOTIFICATION_POLICY" = true
"android.permission.POST_NOTIFICATIONS" = true
"android.permission.VIBRATE" = true
"android.permission.WAKE_LOCK" = true
"android.permission.FOREGROUND_SERVICE" = true
"android.permission.BLUETOOTH" = true
"android.permission.BLUETOOTH_ADMIN" = true
"android.permission.BLUETOOTH_ADVERTISE" = true
"android.permission.BLUETOOTH_CONNECT" = true
"android.permission.BLUETOOTH_SCAN" = true
"android.permission.ACCESS_FINE_LOCATION" = true
"android.permission.ACCESS_COARSE_LOCATION" = true

[tool.flet.app]
path = "."

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}